Navmenu on mobile fix height

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1634,7 +1634,7 @@ header {
     .bottom-header {
       display: flex;
       align-items: baseline;
-      height: 60svh;
+      height: 65svh;
       overflow-y: auto;
       background: $light-color;
       padding: 1rem 0;
